loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:4: error: illegal start of simple expression
} 
^LoopDoWhile:6: error: 'while' expected but '}' found.
	}
        ^